--- a/YH801.html
+++ b/YH801.html
@@ -125,45 +125,9 @@
                             </a>
                           </li>
                           <li class="dropdown dropdown-mega">
-                            <a class="dropdown-item dropdown-toggle active" href="#">
+                            <a class="dropdown-item dropdown-toggle active" href="products.html">
                               產品介紹
                             </a>
-                            <ul class="dropdown-menu">
-                              <li>
-                                <div class="dropdown-mega-content">
-                                  <div class="row">
-                                    <div class="col-lg-3">
-                                      <span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
-                                      <ul class="dropdown-mega-sub-nav">
-                                        <li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
-                                        <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
-                                      </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                      <span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
-                                      <ul class="dropdown-mega-sub-nav">
-                                        <li>
-                                          <a class="dropdown-item" href="YS200.html"
-                                            onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS200.html');">YS-200
-                                            智慧音頻主機</a>
-                                        </li>
-                                        <li>
-                                          <a class="dropdown-item" href="YS250.html"
-                                            onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">YS-250
-                                            數位無線擴音音箱</a>
-                                        </li>
-                                      </ul>
-                                    </div>
-                                    <div class="col-lg-3">
-                                      <span class="dropdown-mega-sub-title">一代無線麥克風</span>
-                                      <ul class="dropdown-mega-sub-nav">
-                                        <li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
-                                      </ul>
-                                    </div>
-                                  </div>
-                                </div>
-                              </li>
-                            </ul>
                           </li>
                           <li class="dropdown">
                             <a class="dropdown-item dropdown-toggle" href="service.html">
