--- a/about.html
+++ b/about.html
@@ -119,37 +119,9 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle" href="#">
+														<a class="dropdown-item dropdown-toggle" href="products.html">
 															產品介紹
 														</a>
-														<ul class="dropdown-menu">
-															<li>
-																<div class="dropdown-mega-content">
-																	<div class="row">
-																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
-																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
-																				<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
-																			</ul>
-																		</div>
-																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
-																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
-																				<li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
-																			</ul>
-																		</div>
-																		<div class="col-lg-3">
-																			<span class="dropdown-mega-sub-title">一代無線麥克風</span>
-																			<ul class="dropdown-mega-sub-nav">
-																				<li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
-																			</ul>
-																		</div>
-																	</div>
-																</div>
-															</li>
-														</ul>
 													</li>
 													<li class="dropdown">
 														<a class="dropdown-item dropdown-toggle" href="service.html">
@@ -230,7 +202,7 @@
 							<div class="col-lg-7 order-2 order-lg-1 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
 								<h6 class="text-color-primary font-weight-medium positive-ls-1 mb-2">OUR CHALLENGE</h6>
 								<h4 class="font-weight-bold text-transform-none line-height-2 text-5-6 mb-2">教學環境的問題</h4>
-								<p class="line-height-7 text-4 mb-3">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</p>
+								<p class="line-height-7 text-4 mb-3"><strong class="font-weight-semibold">麥克風與擴音器能"無線" "更好" "更方便"嗎?</strong></p>
 								<div class="testimonial testimonial-secondary mb-1">
 									<blockquote class="pt-4 pb-4">
 										<p class="mb-2">『感覺麥克風這東西40年沒變了!』</p>
@@ -238,23 +210,32 @@
 									</blockquote>
 									<div class="testimonial-arrow-down"></div>
 									<div class="testimonial-author">
-										<p class="line-height-7 text-4 mb-2"><strong class="font-weight-semibold">傳統那重重的麥克風、那條長長的線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的麥克風都讓使用者付出不小心力，並多出職業病。但電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，改變了你我的生活 也增加了更多的可能。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
+										<p class="line-height-7 text-4 mb-2"><strong class="font-weight-semibold">傳統那重重的有線麥克風、那條份量不輕的麥克風線；又或是小蜜蜂那掛在腰上沉重的音箱，糾結的耳麥線，都讓使用者付出不小心力，為了減少聲帶受傷的職業病只能將就~~</strong></p>
+									</div>
+									<div class="testimonial-author">
+										<p class="line-height-7 text-4 mb-2"><strong class="font-weight-semibold">但今日電話已經變成手機，映像管電視已經變成又大又清晰的 LCD電視，老三台也變成幾百個頻道外加網路頻道….這些改變，徹底改變了你我的生活也增加了更多的便利。為什麼麥克風還是跟和二、三十年前一樣呢？</strong></p>
 									</div>
 								</div>
 								<ul class="list list-icons list-icons-lg">
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-4">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？</span>
+										<span class="text-4">醫護人員說明、區公所/衛生所疫情引導人流，若聲音尖銳 對聽眾也是折磨；長官/政治人物戶外演講音箱又離不了身 而群眾站太遠</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-4">學校跑堂、戶外導覽時，一個快0.4公斤的一掛就一天，還有一條有線耳麥纏著，喇叭太大聲 前面太吵，後面又聽不清楚...</span>
+										<span class="text-4">學校跑堂、戶外導覽時，一個大音箱纏腰掛一天，還有一條有線耳麥線拉扯；聲音忽大忽小，喇叭太大聲，前面太吵，後面又聽不清楚...</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right"></i>
-										<span class="text-4">肺炎病毒傳染力強，公用麥克風是否成為傳播源，自備一隻輕巧專用無線麥克風 / 擴音器，熟悉又安心</span>
+										<span class="text-4">教育環境越來越活潑，辛苦備課準備了生動的教材，要如何讓學生參與？麥克風可以戴著釋放雙手且在教室自由遊走嗎</span>
 									</li>
 								</ul>
+                <div class="alert alert-warning text-center text-4">
+                  <strong>
+                    若是能做到麥克風與擴音器皆輕薄短小、無線、無干擾、原音重現，<br>
+                    是不是就可以減輕自己身體的負擔也讓群眾感受到您清晰的講話內容
+                  </strong>
+                </div>
 							</div>
 							<div class="col-lg-5 order-1 order-lg-2 pl-lg-5 mb-4 mb-lg-0">
 								<img src="img/about/pic_about_11.jpg" class="img-fluid box-shadow-3 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="500" alt="" />
@@ -289,7 +270,7 @@
 										</span>
 									</span>
 								</p>
-								<p class="line-height-7 text-4 mb-3">十多年手機從 2G  3G  4G 要進入 5G 了，如同手機一般，藉由手機技術的進步，養聲堂無線麥克風希望也能帶來改變，讓無線麥克風開始帶給您更多的便利與未來在工作 / 教學上有更多”無線”的可能!</p>
+								<p class="line-height-7 text-4 mb-3">十多年手機從 2G  3G  4G 要進入 5G 了，如同手機一般，藉由手機技術的進步，養聲堂無線麥克風希望也能帶來改變，讓無線麥克風開始帶給您更多的便利與未來在工作 / 教學上有更多 <strong>”無 - 線 - 的 - 可 - 能”</strong> !</p>
 								<div class="owl-carousel owl-theme nav-inside nav-style-1 nav-light owl-loaded owl-drag owl-carousel-init"
 									data-plugin-options="{'items': 1, 'margin': 10, 'loop': true, 'nav': true, 'dots': false, 'autoplay': true,
 									'autoplayTimeout': 3000}"
