--- a/smartMic.html
+++ b/smartMic.html
@@ -139,25 +139,9 @@
 													</a>
 												</li>
 												<li class="dropdown">
-													<a class="dropdown-item dropdown-toggle" href="#">
+													<a class="dropdown-item dropdown-toggle" href="products.html">
 														產品介紹
 													</a>
-													<ul class="dropdown-menu">
-														<li class="dropdown-submenu">
-															<a class="dropdown-item" href="#">二代無線擴音 / 麥克風</a>
-															<ul class="dropdown-menu">
-																<li><a class="dropdown-item" href="YS100.html">YS-100 手持無線麥克風</a></li>
-																<li><a class="dropdown-item" href="YS150.html">YS-150 頸掛穿戴無線麥克風</a></li>
-																<li><a class="dropdown-item" href="YS200.html">YS-200 智慧無線接收主機</a></li>
-																<li><a class="dropdown-item" href="YS250.html">YS-250 無線擴音音箱</a></li>
-															</ul>
-														</li>
-														<li>
-															<a class="dropdown-item" href="YH801.html">
-																YH-801 一代無線麥克風組
-															</a>
-														</li>
-													</ul>
 												</li>
 												<li class="dropdown">
 													<a class="dropdown-item dropdown-toggle" href="service.html">
