--- a/YS250.html
+++ b/YS250.html
@@ -123,37 +123,9 @@
                           </a>
                         </li>
                         <li class="dropdown dropdown-mega">
-                          <a class="dropdown-item dropdown-toggle active" href="#">
+                          <a class="dropdown-item dropdown-toggle active" href="products.html">
                             產品介紹
                           </a>
-                          <ul class="dropdown-menu">
-                            <li>
-                              <div class="dropdown-mega-content">
-                                <div class="row">
-                                  <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線麥克風(發射端)</span>
-                                    <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS100.html">YS-100 手持數位無線麥克風</a></li>
-                                      <li><a class="dropdown-item" href="YS150.html">YS-150 頸掛數位無線麥克風</a></li>
-                                    </ul>
-                                  </div>
-                                  <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">二代無線擴音(接收端)</span>
-                                    <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YS200.html">YS-200 智慧音頻主機</a></li>
-                                      <li><a class="dropdown-item" href="YS250.html">YS-250 數位無線擴音音箱</a></li>
-                                    </ul>
-                                  </div>
-                                  <div class="col-lg-3">
-                                    <span class="dropdown-mega-sub-title">一代無線麥克風</span>
-                                    <ul class="dropdown-mega-sub-nav">
-                                      <li><a class="dropdown-item" href="YH801.html">YH-801 一代無線麥克風組</a></li>
-                                    </ul>
-                                  </div>
-                                </div>
-                              </div>
-                            </li>
-                          </ul>
                         </li>
                         <li class="dropdown">
                           <a class="dropdown-item dropdown-toggle" href="service.html">
@@ -215,12 +187,12 @@
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">重量輕 音質清晰 自動對頻 可邊充邊用</p>
           </div>
 
-          <p class="line-height-7 mb-3 mt-3 text-right">
+          <!-- <p class="line-height-7 mb-3 mt-3 text-right">
             <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
               YS-250 防疫優惠專案
               <i class="fas fa-arrow-right ml-1"></i>
             </a>
-          </p>
+          </p> -->
 
           <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
