--- a/YS200.html
+++ b/YS200.html
@@ -197,12 +197,12 @@
             </div>
           </div>
 
-          <p class="line-height-7 mb-3 mt-3 text-right">
+          <!-- <p class="line-height-7 mb-3 mt-3 text-right">
             <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
               揪團團購優惠專案
               <i class="fas fa-arrow-right ml-1"></i>
             </a>
-          </p>
+          </p> -->
           <div class="row mb-0 pb-0 pt-0">
             <div class="col-lg-6 mb-0 mb-lg-0">
               <div class="image-hotspots">
