--- a/YS250.html
+++ b/YS250.html
@@ -256,11 +256,11 @@
                 </li>
                 <li class="ys-2">
                   <h4 class="font-weight-semibold text-4 mb-0">音量調整旋鈕 :</h4>
-                  <span class="text-4">旋紐手感佳大方，清楚標示音量</span>
+                  <span class="text-4">旋鈕手感佳大方，清楚標示音量</span>
                 </li>
                 <li class="ys-3">
                   <h4 class="font-weight-semibold text-4 mb-0">開機鍵 :</h4>
-                  <span class="text-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 5 秒</span>
+                  <span class="text-4">開機/關機 : 功能鍵按 2 秒。<br>配對 :功能鍵按 7 秒</span>
                 </li>
                 <li class="ys-4">
                   <h4 class="font-weight-semibold text-4 mb-0">連線指示燈 :</h4>
@@ -273,8 +273,8 @@
                 </li>
                 <li class="ys-6">
                   <h4 class="font-weight-semibold text-4 mb-0">USB 充電孔 :</h4>
-                  <span class="text-4">採用國際標準 USB 電壓，內建電動車等級高效鋰電池，充電器為 5V 1.2A (安培)，輕巧、環保、壽命長<br>
-                    搭配特製Y型充電線，可以同時充電麥克風與音箱</span>
+                  <span class="text-4">內建電動車等級高效鋰電池，輕巧、環保、壽命長
+                  採用國際標準 Micro-USB充電，規格 5V 1.2A ( 安培 ) 搭配特製 Y 型充電線，可以同時充電麥克風與音箱</span>
                 </li>
                 <a name="ys-6"></a>
                 <li class="ys-7">
@@ -316,7 +316,7 @@
           <h4 class="text-4 pt-2"><strong>產品規格 ：</strong></h4>
           <div class="row">
             <div class="col-lg-6 mb-0 mb-lg-0">
-              <ul class="list list-icons list-dark mt-2">
+              <ul class="list list-icons list-dark mt-2 text-4">
                 <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">無線發射使用頻率：</span>
                   2402~2408MHz</li>
                 <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">跳頻展頻(FHSS)技術：</span>
@@ -332,7 +332,7 @@
               </ul>
             </div>
             <div class="col-lg-6 mb-0 mb-lg-0">
-              <ul class="list list-icons list-dark mt-2">
+              <ul class="list list-icons list-dark mt-2 text-4">
                 <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">喇叭輸出功率：</span>
                   10W (Max.)</li>
                 <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">喇叭阻抗：</span> 4 Ω</li>
@@ -345,7 +345,7 @@
                   4 小時
                 </li>
                 <li class="mb-1"><i class="fas fa-sparkles top-4"></i> <span class="text-success">使用時數：</span>
-                  授課約 15 小時 /音樂約 5小時 (與擴音音量大小有關)
+                  授課約 13 小時 /音樂約 5小時 (與擴音音量大小有關)
                 </li>
               </ul>
             </div>
