--- a/index.html
+++ b/index.html
@@ -368,15 +368,15 @@
 								<ul class="list list-icons list-primary">
 									<li>
 										<i class="fas fa-angle-right text-4-5"></i>
-										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂是唯一專注教學環境領域與行動擴音需求的聲學產品開發公司</span>
+										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂是唯一專注需長時間使用麥克風與行動擴音需求的聲學產品開發公司</span>
 										<br>
-										<span class="text-4">讓優質、輕薄、短小麥克風實現在教學與音箱擴音領域。</span>
+										<span class="text-4">讓優質、輕薄、短小等資訊產品特質，實現在日常使用的麥克風，讓先進的穿戴式設計與工學設計運用於麥克風與音箱擴音領域。</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right text-4-5"></i>
-										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂誓願做教育者最佳夥伴</span>
+										<span class="text-4-5 font-weight-extra-bold text-primary">養聲堂誓願做專業人士、教育工作者最佳夥伴</span>
 										<br>
-										<span class="text-4">養聲堂誓願做教育者最佳夥伴，結合資深的工業設計、電子、聲學等工程師，重新設計與定義麥克風/擴音產品，全部無線化/數位化，進而改善使用者的不便 讓教學方式改變。</span>
+										<span class="text-4">養聲堂結合資訊業資深的工業設計、電子、聲學等工程師，重新設計與定義麥克風/擴音產品新樣貌，全部無線化/數位化，進而改善使用者的不便 讓休閒、工作、教學方式改變，讓專業人士、教育工作者也有專業的擴音工具。</span>
 									</li>
 									<li>
 										<i class="fas fa-angle-right text-4-5"></i>
@@ -510,32 +510,38 @@
 								</div>
 								<div class="col-sm-12 col-md-7">
 									<div>
-										<h3 class="media-heading" style="color: #ff6600;font-size: 22px;font-weight: 600;margin-bottom: 0">
-											手機藍牙 無線麥克風擴音音箱來了!</h3>
+										<h3 class="media-heading">
+											手機藍牙 無線麥克風擴音音箱來了!
+                    </h3>
 									</div>
-									<h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
-										台灣開發設計製造 YS-250 首發上市<br>
-										<a href="http://youngtone.com.tw/service.html?service=microphoneUpgrade"
-										 style="color:#86ae3c;font-size: 18px;font-weight: 500;text-decoration: underline;">兼容二代手持/頸掛麥克風</a>
-									</h3>
-									<p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-										<span style="color:#999999;">了解新產品及優惠活動，請點擊 :</span>
-										<br>
-										<a class="modal__button" href="YS250.html"
-											onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">
-											<span>產品介紹</span>
-										</a> |
-										<a class="modal__button" href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" target="_blank">
-											<span>Youtube 頻道</span>
-										</a> |
-										<a class="modal__button"
-											href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
-											target="_blank">
-											<span>FB粉絲團</span>
-										</a><br>
-                    <a class="modal__button modal__button--promote" href="promote_202206.html">
+									<p class="media-content">
+										台灣開發設計製造 
+                    <a href="YS250.html" class="media-link"
+                      onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">YS-250
+                    </a> 首發上市
+                    <br>
+                    <a href="promote_202206.html" class="media-link">
                       <span>擴音音箱組合包</span>
                     </a>
+                    |
+										<a href="http://youngtone.com.tw/service.html?service=microphoneUpgrade"
+										 class="media-link">麥克風升級
+                    </a>
+									</p>
+									<p style="margin:10px 0 13px 0;font-size: 20px;font-weight: 500">
+										<span style="color:#999999;">了解新產品及優惠活動，請點擊 :</span>
+										<br>
+										<a href="/products.html" class="media-link">
+											<span>產品介紹</span>
+										</a> |
+										<a href=" https://www.youtube.com/channel/UCmDc3tKSyBSYxPnci35Jy-Q" class="media-link" target="_blank">
+											<span>Youtube 頻道</span>
+										</a> |
+										<a
+											href="https://www.facebook.com/%E9%A4%8A%E8%81%B2%E5%A0%82%E7%A7%91%E6%8A%80-779961655447214/"
+                      class="media-link" target="_blank">
+											<span>FB粉絲團</span>
+										</a>
 									</p>
 									<!-- <p style="margin:5px 0 13px 0;font-size: 15px;font-weight: 500">
 										臉書
