--- a/products.html
+++ b/products.html
@@ -195,8 +195,13 @@
 				    <div class="col mb-2">
               <h4 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-4" style="color: #0068b7;">二代智慧無線麥克風/擴音系列</h4>
 				      <p class="line-height-7 text-4 mb-2 mt-3">
-                養聲堂智慧智慧無線麥克風係使用手機藍牙的架構，將"麥克風"模擬成手機的角色，做聲音的收音和無線的發射端；同時將接收主機跟無線擴音音箱做成聲音接受端接受來自手機/麥克風信號並做擴音的處理。您在選購時可以自由搭配，先考慮您的使用方式與習慣選擇麥克風，在考慮使用環境是否有擴音設備或是需戶外活動而選擇選擇
-                搭配的主機或擴音音箱。設備內可記憶多組配對設備，所以多個麥克風搭配一個接收設備也可以，只是同一時間只有一對一使用。
+                養聲堂智慧智慧無線麥克風類似手機藍牙，將<strong>"麥克風"</strong>模擬成手機的角色，做聲音的收音和無線的<strong>發射端</strong>；同時將<strong>接收主機跟無線擴音音箱</strong>做成聲音<strong>接收端</strong>接受來自手機/麥克風信號並做擴音的處理。
+				      </p>
+				      <p class="line-height-7 text-4 mb-2 mt-3">
+                您在選購時可以自由搭配，先考慮您的使用方式與習慣來選擇麥克風，再考慮使用環境是否有擴音設備或是需戶外活動而選擇搭配的主機或擴音音箱。
+				      </p>
+				      <p class="line-height-7 text-4 mb-2 mt-3">
+                設備內可記憶多組配對過設備，所以多個麥克風搭配一個接收設備也可以，只是同一時間只有一對一使用。
 				      </p>
 				    </div>
 				  </div>
@@ -208,7 +213,7 @@
 
                   <div class="testimonial testimonial-primary">
                     <blockquote>
-                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">發射端</div>
+                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">麥克風 / 發射端</div>
                     </blockquote>
                     <div class="testimonial-arrow-down"></div>
                   </div>
@@ -221,9 +226,9 @@
                           <span class="thumb-info-wrapper">
                             <img src="img/products/products_ys100.jpg" class="img-fluid" alt="YS-100 手持無線麥克風">
                             <span class="thumb-info-title bg-transparent p-4">
-                              <span class="thumb-info-type bg-color-primary px-2 mb-2">YS-100</span>
-                              <span class="thumb-info-inner line-height-1 text-4 font-weight-bold text-dark">手持無線麥克風</span>
-                              <span class="thumb-info-type opacity-6 text-dark">重量：70g 可用 17 小時</span>
+                              <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-100</span>
+                              <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">手持無線麥克風</span>
+                              <span class="thumb-info-type opacity-6 text-4 text-dark">重量：70g 可用 17 小時</span>
                             </span>
                           </span>
                         </span>
@@ -238,9 +243,9 @@
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys150.jpg" class="img-fluid" alt="YS-150 頸掛穿戴無線麥克風">
                           <span class="thumb-info-title bg-transparent p-4">
-                            <span class="thumb-info-type bg-color-primary px-2 mb-2">YS-150</span>
-                            <span class="thumb-info-inner line-height-1 text-4 font-weight-bold text-dark">頸掛穿戴無線麥克風</span>
-                            <span class="thumb-info-type opacity-6 text-dark">重量：43g 可用 13 小時</span>
+                            <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-150</span>
+                            <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">頸掛穿戴無線麥克風</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：43g 可用 13 小時</span>
                           </span>
                         </span>
                       </span>
@@ -251,12 +256,12 @@
                     <a href="javascript:$('#YH801').modal('show')">
                       <span
                         class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
-                        <span class="thumb-info-wrapper">
-                          <img src="img/products/products_yh801.jpg" class="img-fluid" alt="YH-801 一代無線麥克風組">
+                        <span class="thumb-info-wrapper" style="height:150px">
+                          <!-- <img src="img/products/products_yh801.jpg" class="img-fluid" alt="YH-801 一代無線麥克風組"> -->
                           <span class="thumb-info-title bg-transparent p-4">
-                            <span class="thumb-info-type bg-color-primary px-2 mb-2">YH-801</span>
-                            <span class="thumb-info-inner line-height-1 text-4 font-weight-bold text-dark">一代無線麥克風組</span>
-                            <span class="thumb-info-type opacity-6 text-dark">停產，維護服務</span>
+                            <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YH-801</span>
+                            <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">一代無線麥克風組 (已停產)</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark">售後維護服務</span>
                           </span>
                         </span>
                       </span>
@@ -268,7 +273,7 @@
 
                   <div class="testimonial testimonial-secondary">
                     <blockquote>
-                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">接收器</div>
+                      <div class="text-color-light line-height-2 text-5 font-weight-bold mb-0 text-center">收音 / 接收端</div>
                     </blockquote>
                     <div class="testimonial-arrow-down"></div>
                   </div>
@@ -280,9 +285,9 @@
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys200.jpg" class="img-fluid" alt="YS-200 智慧無線接收主機">
                           <span class="thumb-info-title bg-transparent p-4">
-                            <span class="thumb-info-type bg-color-primary px-2 mb-2">YS-200</span>
-                            <span class="thumb-info-inner line-height-1 text-4 font-weight-bold text-dark">智慧無線接收主機</span>
-                            <span class="thumb-info-type opacity-6 text-dark">重量：40g 可用 17 小時</span>
+                            <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-200</span>
+                            <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">智慧無線接收主機</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：40g 可用 18 小時</span>
                           </span>
                         </span>
                       </span>
@@ -296,9 +301,9 @@
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys250.jpg" class="img-fluid" alt="YS-250 無線擴音音箱">
                           <span class="thumb-info-title bg-transparent p-4">
-                            <span class="thumb-info-type bg-color-primary px-2 mb-2">YS-250</span>
-                            <span class="thumb-info-inner line-height-1 text-4 font-weight-bold text-dark">無線擴音音箱</span>
-                            <span class="thumb-info-type opacity-6 text-dark">重量：280g 可用 14 小時<br>(與擴音音量大小有關)</span>
+                            <span class="thumb-info-type bg-color-primary text-3 px-2 mb-2">YS-250</span>
+                            <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">無線擴音音箱</span>
+                            <span class="thumb-info-type opacity-6 text-4 text-dark">重量：299g 可用 13 小時<br>(與擴音音量大小有關)</span>
                           </span>
                         </span>
                       </span>
@@ -327,14 +332,24 @@
                 <div class="col-12">
                   <div>
                     <h3 class="media-heading" style="color: #ff6600;font-size: 22px;font-weight: 600;margin-bottom: 0">
-                      一代無線麥克風組 (YH-801)</h3>
+                      YH-801 無線麥克風組 (一代)</h3>
                   </div>
                   <h3 style="color:#86ae3c;margin:15px 0 13px 0;font-size: 20px;font-weight: 500;">
-                    停產 / 維護服務
+                    售後維護服務
                   </h3>
-                  <p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
-                    <strong style="color: #000000">為維護客戶的權益</strong>，正式<span style="color: #ff6600">停產</span>後的五年內仍會提供<strong style="color: #000000">技術與維修服務</strong>及供應相關零配件，若有零件不足也會<strong style="color: #000000">提供相當替代維修品</strong>，服務預計到 2027 年 4 月止。若有需求，可來電原廠洽詢
-                  </p>
+                  <div class="row">
+                    <div class="col-sm-12 col-md-7">
+                      <p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
+                        <strong style="color: #000000">為維護客戶的權益</strong>，正式停產後的五年內仍會提供技術與維修服務及供應相關零配件，若有零件不足也會提供相當替代維修品。
+                      </p>
+                      <p style="margin:10px 0 13px 0;font-size: 15px;font-weight: 500">
+                        <strong style="color: #000000">維護服務</strong>預計預計可提供到 <strong style="color: #000000">2027 年 4 月</strong>止。<br>若有產品諮詢、維修需求，可來電原廠洽詢，歡迎利用。
+                      </p>
+                    </div>
+                    <div class="media-left media-top col-sm-12 col-md-5" style="padding-bottom:15px">
+                      <img src="img/products/products_yh801-small.jpg" class="media-object" style="width:100%;">
+                    </div>
+                  </div>                  
                 </div>
               </div>
             </div>
