--- a/promote_202206.html
+++ b/promote_202206.html
@@ -175,13 +175,14 @@
 				<div class="container py-4">
 				  <div class="row">
 				    <div class="col mb-5">
-              <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-4" style="color: #0068b7;">無線擴音音箱組</h2>
+              <h2 class="text-center font-weight-extra-bold line-height-7 text-7-8 mb-4" style="color: #0068b7;">無線擴音音箱組合包</h2>
 				      <p class="line-height-7 text-4 mb-2 mt-3">
-                新冠疫情持續影響我們的工作與日常生活，尤其對於需要面對學生或群眾的工作，如學校、補習班、安親班、醫院、戶外引導/覽的工作，需共用麥克風、頻繁與他人近距離接觸，將無法與他人維持安全距離，使用戶長時間暴露在風險之下。使用傳統有線麥克風或小蜜蜂時，會出現音量問題、有線耳麥也會有很多限制。
+                新冠疫情持續影響我們的工作與日常生活，尤其是對於需要面對學生或群眾的工作，如學校、補習班、安親班、醫院、戶外引導/導覽的工作，很多需共用麥克風、頻繁與他人近距離接觸，也無法與他人保持安全距離，使用戶長時間暴露在風險之下。傳統使用有線麥克風或小蜜蜂時，常遇到聲音尖銳
+                聲音忽大忽小問題、有線耳麥也會拉扯有很多限制。
 				      </p>
-              <p class="line-height-7 text-4 mb-3">一個高品質個人專用的麥克風對防疫是絕對有效的，養聲堂新款的YS-250 全無線擴音箱組~ 讓您有不同的麥克風選擇，無線擴音音箱也可放在人群中，有效的傳達聲音到目標區域並擴音，且保持安全距離。</p>
-              <p class="line-height-7 text-4 mb-3">尤其近期疫情捲土重來，公司將負起社會責任，繼續優惠專案內容。另一方面我們產品因皆採用國際電子大廠(Qualcomm,TI...)製造之零件，自2020年底，部分零件價格漲了6~8倍，最近採購價格仍達原先的4~5倍，我們原始售價已經無法負擔，預計於2022年6月微調產品價格。</p>
-              <p class="line-height-7 text-4 mb-3">同時秉持產品設計完全以使用者體驗出發，原本防疫專案期間公司所特別贈送的3C 收納包廣受好評，且能讓使用者有很好的體驗，公司也決定將收納包成為無線擴音音箱組的標準配備。</p>
+              <p class="line-height-7 text-4 mb-3">一個高品質個人專用的麥克風對防疫工作是絕對有效的，養聲堂新款的 YS-250 全無線擴音箱組~ 讓您有不同的麥克風選擇，無線擴音音箱也可放在人群中，有效的傳達聲音到目標區域並擴音，且保持安全距離。</p>
+              <p class="line-height-7 text-4 mb-3">我們產品因皆已全部使用高科技晶片開發，採用國際電子大廠 ( Qualcomm, TI... )製造之零件；自 2020 年底，部分零件價格漲了 6 ~ 8 倍，最近採購價格仍達原價的 4 ~ 5 倍，我們原始售價已經無法負擔。防疫優惠專案將停止。</p>
+              <p class="line-height-7 text-4 mb-3">同時秉持產品設計須完全以使用者體驗出發，原本防疫專案期間公司所特別贈送的 3C 收納包廣受好評，且能讓使用者有很好的體驗。公司也決定將收納包成為無線擴音音箱組的標準配備，並將收納包成本大部吸收，以最優惠的價格提供。</p>
 				    </div>
 				  </div>
 
