--- a/about.html
+++ b/about.html
@@ -357,7 +357,7 @@
 
 							</div>
 							<div class="col-lg-6 pr-lg-5 mb-4 mb-lg-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
-								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">WHERE WO DO</h6>
+								<h6 class="text-color-primary font-weight-medium positive-ls-3 mb-2">WHERE TO USE</h6>
 								<h4 class="font-weight-bold text-transform-none text-5-6 line-height-2 mb-2">生活場景的應用</h4>
 
 								<ul class="list list-icons list-icons-lg">
@@ -432,7 +432,7 @@
 								<p class="line-height-7 text-4 mb-2">現今電子產品皆已朝向數位化、無線化發展，其所借助的就是半導體技術。晶片設計公司將功能整合後，到如台積電等代工廠做成 IC(積體電路)。IC 應用在產品中，讓新產品體積更小、重量輕、特性更穩定、使用時數更長、也不會因使用時間久了零件老化造成品質降低。</p>
 								<p class="line-height-7 text-4 mb-2">讓麥克風 / 擴音走向無線、IC 化，方能提供您穩定、輕薄、人體工學設計的產品，讓新科技持續導入到麥克風與擴音系統，讓教學 導覽使用者方便無負擔。</p>
 								<p class="line-height-7 text-4 mb-2">不斷嘗試創新 採用高科技技術 保證最好的品質 只要平實的價格 這就是養聲堂。</p>
-								<p class="line-height-7 font-weight-bold text-right text-4 mb-2">~ 這是我們的承諾</p>
+								<p class="line-height-7 font-weight-bold text-right text-6 mb-2">~ 這是我們的承諾</p>
 							</div>
 						</div>
 					</div>
