--- a/products.html
+++ b/products.html
@@ -222,7 +222,7 @@
                     <div class="portfolio-item">
                       <a href="YS100.html">
                         <span
-                          class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                          class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zooms" style="border-radius: 4px;">
                           <span class="thumb-info-wrapper">
                             <img src="img/products/products_ys100.jpg" class="img-fluid" alt="YS-100 手持無線麥克風">
                             <span class="thumb-info-title bg-transparent p-4">
@@ -239,7 +239,7 @@
                   <div class="mb-4 pb-2">
                     <a href="YS150.html">
                       <span
-                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys150.jpg" class="img-fluid" alt="YS-150 頸掛穿戴無線麥克風">
                           <span class="thumb-info-title bg-transparent p-4">
@@ -252,10 +252,22 @@
                     </a>
                   </div>
 
+                  <div class="mb-4 pb-2">
+                    <span
+                      class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom"
+                      style="border-width: 0;background-color: transparent;"
+                      >
+                        <img src="img/products/products_bluetooth.jpg" class="img-fluid" alt="YS-150 頸掛穿戴無線麥克風">
+                        <span class="thumb-info-title bg-transparent p-4">
+                          <span class="thumb-info-inner line-height-1 text-5 font-weight-bold text-dark">手機 / PC / NB 藍牙</span>
+                        </span>
+                    </span>
+                  </div>
+
                   <div class="mb-4 pb-0">
                     <a href="javascript:$('#YH801').modal('show')">
                       <span
-                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
                         <span class="thumb-info-wrapper" style="height:150px">
                           <!-- <img src="img/products/products_yh801.jpg" class="img-fluid" alt="YH-801 一代無線麥克風組"> -->
                           <span class="thumb-info-title bg-transparent p-4">
@@ -281,7 +293,7 @@
                   <div class="mb-4 pb-2">
                     <a href="YS200.html" onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS200.html');">
                       <span
-                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys200.jpg" class="img-fluid" alt="YS-200 智慧無線接收主機">
                           <span class="thumb-info-title bg-transparent p-4">
@@ -297,7 +309,7 @@
                   <div class="mb-4 pb-0">
                     <a href="YS250.html" onclick="return gtag_report_conversion('http://www.youngtone.com.tw/YS250.html');">
                       <span
-                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom border-radius-0">
+                        class="thumb-info thumb-info-no-borders thumb-info-lighten thumb-info-bottom-info thumb-info-bottom-info-dark thumb-info-bottom-info-show-more thumb-info-no-zoom" style="border-radius: 4px;">
                         <span class="thumb-info-wrapper">
                           <img src="img/products/products_ys250.jpg" class="img-fluid" alt="YS-250 無線擴音音箱">
                           <span class="thumb-info-title bg-transparent p-4">
