--- a/YS100.html
+++ b/YS100.html
@@ -177,7 +177,30 @@
           </div>
         </div>
       </section>
-
+      <div id="tab" class="container pt-2">
+        <div class="row justify-content-end">
+          <div class="col-lg-3 col-md-6 m-0 p-0">
+            <div class="row m-0">
+              <div class="col-6 m-0 p-1">
+                <a href="YS100.html" class="btn btn-primary btn-lg btn-block disabled">手持麥克風</a>
+              </div>
+              <div class="col-6 m-0 p-1">
+                <a href="YS150.html" class="btn btn-primary btn-lg btn-block">頸卦麥克風</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 m-0 p-0">
+             <div class="row m-0">
+              <div class="col-6 m-0 p-1">
+                <a href="YS200.html" class="btn btn-secondary btn-lg btn-block">音頻主機</a>
+              </div>
+              <div class="col-6 m-0 p-1">
+                <a href="YS250.html" class="btn btn-secondary btn-lg btn-block">擴音音箱</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- YS-100 -->
       <div id="YS-100" class="container">
         <div class="container">
@@ -187,17 +210,6 @@
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">全世界第一款 輕盈又適合長時間使用的麥克風</p>
             <p class="text-center font-weight-extra-bold line-height-7 text-4 mb-0">開機自動搜尋、動態自動對頻、一對一自動連結</p>
           </div>
-
-          <!-- <p class="line-height-7 mb-3 mt-3 text-right">
-            <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202108.html">
-              YS-250 防疫優惠專案
-              <i class="fas fa-arrow-right ml-1"></i>
-            </a>
-            <a class="btn btn-outline btn-success text-4 mb-2" href="promote_202109.html">
-              揪團團購優惠專案
-              <i class="fas fa-arrow-right ml-1"></i>
-            </a>
-          </p> -->
 
           <div class="row mb-4 pb-0 pt-5" style="align-items: flex-start;">
             <div class="col-lg-6 mb-0 mb-lg-0">
