--- a/YS200.html
+++ b/YS200.html
@@ -177,6 +177,30 @@
           </div>
         </div>
       </section>
+      <div id="tab" class="container pt-2">
+        <div class="row justify-content-end">
+          <div class="col-lg-3 col-md-6 m-0 p-0">
+            <div class="row m-0">
+              <div class="col-6 m-0 p-1">
+                <a href="YS100.html" class="btn btn-primary btn-lg btn-block">手持麥克風</a>
+              </div>
+              <div class="col-6 m-0 p-1">
+                <a href="YS150.html" class="btn btn-primary btn-lg btn-block">頸卦麥克風</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 m-0 p-0">
+            <div class="row m-0">
+              <div class="col-6 m-0 p-1">
+                <a href="YS200.html" class="btn btn-secondary btn-lg btn-block disabled">音頻主機</a>
+              </div>
+              <div class="col-6 m-0 p-1">
+                <a href="YS250.html" class="btn btn-secondary btn-lg btn-block">擴音音箱</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- YS-200 -->
       <div id="YS-200" class="container">
